# python-architecture-patterns

./: README.md  pyproject.toml
shipping_api/: __init__.py  __main__.py  app.py  batches.py  config.py  database.py  model.py  orm.py  repository.py
tests/: conftest.py  test_allocate.py  test_batches.py  test_orm.py  test_repository.py
