[tool.poetry]
name = "shipping_api"
version = "0.1.0"
description = ""
authors = ["Kelvin Ducray <kelvin.ducray@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.2"
fastapi = "^0.73.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
