[tool.poetry]
name = "shipping_api"
version = "0.1.0"
description = ""
authors = ["Kelvin Ducray <kelvin.ducray@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.2"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
SQLAlchemy = "^1.4.31"
psycopg2 = "^2.9.3"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"

[tool.black]
line-length = 99 # override black's default line-length

[tool.isort]
profile = "black" # Ensure compatibility with black

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
